Add a new route for the stories list page.

--- a/app/index.html
+++ b/app/index.html
@@ -27,6 +27,10 @@
   -->
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
+
   <script src="app.module.js"></script>
+  <script src="app.routes.js"></script>
+  
+  <script src="stories/stories.controller.js"></script>
 </body>
 </html>
