--- a/app/index.html
+++ b/app/index.html
@@ -33,5 +33,6 @@
   <script src="app.routes.js"></script>
   
   <script src="stories/stories.controller.js"></script>
+  <script src="stories/stories.service.js"></script>
 </body>
 </html>
