--- a/app/stories/stories.html
+++ b/app/stories/stories.html
@@ -1,1 +1,3 @@
-<pre>{{model.topStories|json}}</pre>
+<div ng-repeat="story in model.topStories">
+	<a ng-href="{{story.url}}">{{story.title}}</a>
+</div>
