--- a/app/index.html
+++ b/app/index.html
@@ -34,5 +34,6 @@
   
   <script src="stories/stories.controller.js"></script>
   <script src="stories/stories.service.js"></script>
+  <script src="storyDetail/storyDetail.controller.js"></script>
 </body>
 </html>
