--- a/app/stories/stories.html
+++ b/app/stories/stories.html
@@ -1,3 +1,3 @@
 <div ng-repeat="story in model.topStories">
-	<a ng-href="{{story.url}}">{{story.title}}</a>
+	<a ng-click="model.viewDetail(story.id)" href="">{{story.title}}</a>
 </div>
