--- a/app/index.html
+++ b/app/index.html
@@ -32,6 +32,7 @@
   <script src="app.module.js"></script>
   <script src="app.routes.js"></script>
   
+  <script src="shared/constants.js"></script>
   <script src="stories/stories.controller.js"></script>
   <script src="stories/stories.service.js"></script>
   <script src="storyDetail/storyDetail.controller.js"></script>
