--- a/app/index.html
+++ b/app/index.html
@@ -33,6 +33,7 @@
   <script src="app.routes.js"></script>
   
   <script src="shared/constants.js"></script>
+  <script src="shared/commonFunctions.service.js"></script>
   <script src="stories/stories.controller.js"></script>
   <script src="stories/stories.service.js"></script>
   <script src="storyDetail/storyDetail.controller.js"></script>
