--- a/app/index.html
+++ b/app/index.html
@@ -37,5 +37,6 @@
   <script src="stories/stories.controller.js"></script>
   <script src="stories/stories.service.js"></script>
   <script src="storyDetail/storyDetail.controller.js"></script>
+  <script src="storyDetail/storyDetail.service.js"></script>
 </body>
 </html>
