--- a/app/stories/stories.html
+++ b/app/stories/stories.html
@@ -1,3 +1,19 @@
-<div ng-repeat="story in model.topStories">
-	<a ng-click="model.viewDetail(story.id)" href="">{{story.title}}</a>
-</div>
+<md-toolbar>
+	<div class="md-toolbar-tools">
+		<span>HackerNews Top Stories</span>
+	</div>
+</md-toolbar>
+
+<md-content class="layout-padding">
+	<md-grid-list 
+		md-cols="1" md-cols-sm="2" md-cols-md="3" md-cols-gt-md="4"
+		md-row-height="1:1" md-gutter="4px">
+		<md-grid-tile ng-repeat="story in model.topStories"
+			md-col-span="1"
+			md-row-span="3" md-row-span-gt-sm="2">
+			<md-grid-tile-header>
+				<h5>{{story.title}}</h2>
+			</md-grid-tile-header>
+		</md-grid-tile>
+	</md-grid-list>
+</md-content>
