--- a/app/stories/stories.html
+++ b/app/stories/stories.html
@@ -7,13 +7,39 @@
 <md-content class="layout-padding">
 	<md-grid-list 
 		md-cols="1" md-cols-sm="2" md-cols-md="3" md-cols-gt-md="4"
-		md-row-height="1:1" md-gutter="4px">
+		md-row-height="1:1" md-gutter="5px">
 		<md-grid-tile ng-repeat="story in model.topStories"
-			md-col-span="1"
-			md-row-span="3" md-row-span-gt-sm="2">
+			md-col-span="1" md-row-span="2">
 			<md-grid-tile-header>
-				<h5>{{story.title}}</h2>
+				<header>{{story.title}}</header>
 			</md-grid-tile-header>
+
+			<div class="storyContent" layout="column">
+				<div flex="grow" layout="row">
+					<span flex="15">Id</span>
+					<span flex="85">{{story.id}}</span>
+				</div>
+
+				<div flex="grow" layout="row">
+					<span flex="15">By</span>
+					<span flex="85">{{story.by}}</span>
+				</div>
+
+				<div flex="grow" layout="row">
+					<span flex="15">URL</span>
+					<a flex="85" class="wordWrap" ng-click="model.openUrl(story.url)">{{story.url}}</a>
+				</div>
+
+				<div flex="grow" layout="row">
+					<span flex="15">Time</span>
+					<span flex="85">{{story.time * 1000 | date:'dd/MM/yyyy h:mm a'}}</span>
+				</div>
+
+				<div flex="grow" layout="row">
+					<span flex="15">Score</span>
+					<span flex="85">{{story.score}}</span>
+				</div>
+			</div>
 		</md-grid-tile>
 	</md-grid-list>
 </md-content>
