Create a custom colour theme and use md-colors to get obtain the theme colours as Sass variables.

--- a/app/index.html
+++ b/app/index.html
@@ -36,6 +36,7 @@
 
   <script src="app.module.js"></script>
   <script src="app.routes.js"></script>
+  <script src="app.config.js"></script>
   
   <script src="shared/constants.js"></script>
   <script src="shared/commonFunctions.service.js"></script>
