--- a/app/stories/stories.html
+++ b/app/stories/stories.html
@@ -4,10 +4,10 @@
 	</div>
 </md-toolbar>
 
-<md-content class="layout-padding">
+<md-content class="layout-padding md-hue-1">
 	<md-grid-list 
 		md-cols="1" md-cols-sm="2" md-cols-md="3" md-cols-gt-md="4"
-		md-row-height="1:1" md-gutter="5px">
+		md-row-height="1:1" md-gutter="5px" class="storiesGrid">
 		<md-grid-tile ng-repeat="story in model.topStories"
 			md-col-span="1" md-row-span="2">
 			<md-grid-tile-header>
