--- a/app/index.html
+++ b/app/index.html
@@ -25,6 +25,8 @@
 
   <div ng-view></div>
 
+  <hn-loading-overlay></hn-loading-overlay>
+
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
   -->
@@ -41,6 +43,8 @@
   
   <script src="shared/constants.js"></script>
   <script src="shared/commonFunctions.service.js"></script>
+  <script src="loading/loadingOverlayToggler.service.js"></script>
+  <script src="loading/loadingOverlay.directive.js"></script>
   <script src="stories/stories.controller.js"></script>
   <script src="stories/stories.service.js"></script>
   <script src="storyDetail/storyDetail.controller.js"></script>
