Create the UI for the main story detail content.

--- a/app/stories/stories.html
+++ b/app/stories/stories.html
@@ -32,7 +32,7 @@
 					</a>
                     <span flex="10">
                         <md-button class="md-icon-button" ng-click="model.openUrl(story.url)">
-                            <md-icon class="material-icons urlIcons">open_in_new</md-icon>	
+                            <md-icon class="material-icons">open_in_new</md-icon>	
                         </md-button>
                     </span>
 				</div>
