--- a/app/index.html
+++ b/app/index.html
@@ -35,6 +35,7 @@
   <script src="bower_components/angular-route/angular-route.js"></script>
   <script src="bower_components/angular-aria/angular-aria.js"></script>
   <script src="bower_components/angular-animate/angular-animate.js"></script>
+  <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
   <script src="bower_components/angular-material/angular-material.js"></script>
 
   <script src="app.module.js"></script>
